src/snapshots/petgraph__dot__test__label_map_to_weight.snap
---
source: src/dot.rs
expression: dot
---
digraph petgraph {
    N0[label="A"];
    N1[label="B"];
    N0 -> N1[label="EDGE_LABEL"][arrowhead="normal" dir="both" arrowtail="none"];
}

