src/snapshots/petgraph__dot__test__node_no_label.snap
---
source: src/dot.rs
expression: dot
---
digraph petgraph {
    N0;
    N1;
    N0 -> N1[label=""][arrowhead="normal" dir="both" arrowtail="none"];
}

